actual starting point